# texter

./: .gitmodules  CMakeLists.txt  escape.cpp  escape.hpp  font_parser.cpp  main.cpp  text.cpp  text.hpp
data/utf-8/: hello-zalgo.txt  hello.txt  long-br.txt  long.txt  short-bidi.txt
